--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.3",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "rewire": "^6.0.0",
     "truffle": "^5.5.2",
