--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "metamask-react": "^2.3.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "qrcode.react": "^2.0.0",
     "react": "^17.0.2",
@@ -17,8 +18,10 @@
     "react-scripts": "5.0.0",
     "rewire": "^6.0.0",
     "truffle": "^5.5.2",
+    "use-metamask": "^1.3.2",
     "web-vitals": "^2.1.4",
-    "web3": "^1.7.0"
+    "web3": "^1.7.0",
+    "web3modal": "^1.9.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
